@@ -149,6 +149,7 @@ export(change)
 export(col_name)
 export(cols)
 export(constant)
+export(contr.nhelmert)
 export(cvar)
 export(cvars)
 export(dell)
